fixing issue with animation resulting in x overflow on mobile

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,8 +1,10 @@
 body {
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
     @include mobile-only {
       position:relative;
+
     }
     background: linear-gradient(0deg, rgb(231, 231, 231, 0.9), rgb(3, 3, 3));
     & #scrolltotop {
